@@ -32,23 +32,14 @@ sourceSets {
     }
 }
 
-compileJava {
-    options.compilerArgs << "--add-modules" << "jdk.incubator.httpclient"
-}
-
-compileTestJava {
-    options.compilerArgs << "--add-modules" << "jdk.incubator.httpclient"
-}
-
 test {
     include "**/UnitTests.class"
-    jvmArgs << "--add-modules" << "jdk.incubator.httpclient"
 }
-
-bootRun {
-    args = ["--add-modules jdk.incubator.httpclient"]
+task unpack(type: Copy) {
+    dependsOn bootJar
+    from(zipTree(tasks.bootJar.outputs.files.singleFile))
+    into("build/dependency")
 }
-
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
     runtime 'org.springframework.boot:spring-boot-devtools'
